SERVER-7703 Increase StackChecker test limit