src/mongo/db/client.cpp
@@ -57,9 +57,9 @@ namespace mongo {
 
     struct StackChecker { 
 #if defined(_WIN32)
-        enum { SZ = 256 * 1024 };
+        enum { SZ = 322 * 1024 };
 #else
-        enum { SZ = 192 * 1024 };
+        enum { SZ = 210 * 1024 };
 #endif
         char buf[SZ];
         StackChecker() { 
